Use resource location instead of name to identify a theme